--- a/roses/management/commands/translate_roses.ipynb
+++ b/roses/management/commands/translate_roses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,35 @@
        "4                          NaN  Японские розы      True      dafna  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_roses.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['средняя', 'сильная', nan, 'слабая', 'Хорошая', 'Среднее',\n",
+       "       'Слабая ', 'высокая', 'хорошая', 'Очень хорошая',\n",
+       "       'Очень хорошая, цветки дождём не портятся'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_roses['rain_resistance'].unique()"
    ]
   },
   {
